# schug

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: black_check.yml  dockerhub_prod_push.yml  dockerhub_stage_push.yml  pypi_publish.yml  tests.yml
docs/: index.md  structure.md
schug/: config.py
schug/cli/: base.py  fetch.py  load.py
schug/demo/: __init__.py  genes_37.tsv  genes_38.tsv
schug/endpoints/: exons.py  genes.py  transcripts.py
schug/load/: biomart.py  ensembl.py  fetch_resource.py  gene_resources.py
schug/models/: common.py  gene.py  transcript.py
search/: search_index.json
src/schug/: config.py  database.py  main.py
src/schug/cli/: base.py  endpoints.py  fetch.py  load.py
src/schug/database/: __init__.py  ensembl.py  genes.py  session.py
src/schug/demo/: __init__.py  exons_37.tsv  exons_38.tsv  genes_37.tsv  genes_38.tsv  transcripts_37.tsv  transcripts_38.tsv
src/schug/endpoints/: ensembl.py  exons.py  genes.py  transcripts.py
src/schug/load/: REST_load_hgnc_genes.py  biomart.py  demo.py  ensemble.py  fetch_resource.py  gene_resources.py  load_genes_databases.py
src/schug/models/: __init__.py  common.py  ensembl.py  exon.py  (+2 more)
structure/: index.html
tests/: conftest.py  test_schug.py
tests/endpoints/: test_endpoint_exons.py  test_endpoints_genes.py  test_endpoints_http_exceptions.py  test_endpoints_transcripts.py
tests/models/: test_common.py  test_models_common.py  test_models_ensembl.py
