[tool.poetry]
name = "schug"
version = "0.1.0"
description = "Keep track of genes, transcripts and exons from different sources"
authors = ["moonso <mans.magnusson@scilifelab.se>"]
readme = "README.md"

[tool.poetry.scripts]
schug = "schug.cli.base:cli"

[tool.poetry.dependencies]
python = "^3.7"
sqlmodel = "^0.0.4"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
typer = "^0.4.0"
requests = "^2.26.0"
aiofiles = "^23.1.0"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.2.2"
mkdocs-material = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
